<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.schaeffler.officeentry.ui.WifiConnectingFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.WifiConnectingFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingAnimation"
            android:layout_width="125dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            app:isVisible="@{viewModel.success == null}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleLabel"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_dots" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleLabel"
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_fetching_camera_distribution"
            app:isVisible="@{viewModel.success == null}"
            app:layout_constraintBottom_toTopOf="@id/loadingAnimation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/resultText"
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@{viewModel.success ? @string/label_fetching_success : @string/label_fetching_failed}"
            app:isVisible="@{viewModel.success != null}"
            app:layout_constraintBottom_toTopOf="@id/buttonConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Successfully retrieved camera details!" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonConfirm"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"
            app:canVisible="@{viewModel.success}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultText"
            app:onClickPopUntil="@{@id/homeFragment}" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRetry"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_retry"
            app:isVisible="@{viewModel.success != null &amp;&amp; viewModel.success == false}"
            app:layout_constraintBottom_toBottomOf="@id/buttonConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonConfirm"
            app:onClickPopUntil="@{@id/preCameraSetupFragment}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>